# HA-WLED-Progress-Bar

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
custom_components/wled_progress_bar/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py
custom_components/wled_progress_bar/www/: wled-progress-bar-card.js
tests/: test_coordinator.py  test_coordinator_standalone.py  test_led_helpers.py
