[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wled_progress_bar"
version = "0.1.0"
description = "WLED Progress Bar – Home Assistant custom integration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
# Runtime requirements are intentionally empty: the integration relies only
# on aiohttp which is bundled with every Home Assistant installation.
dependencies = []

[project.optional-dependencies]
dev = [
    "homeassistant>=2023.6.0",   # for type hints / import resolution
    "aiohttp>=3.9",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]   # long lines in coordinator comments are fine

[tool.ruff.lint.isort]
known-first-party = ["custom_components.wled_progress_bar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
